// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UsersPage should match a snapshot for the users groups tab 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-flex-auto el-flex-container"
      >
        <aside
          class="el-secondary-nav-container"
        >
          <h1
            class="el-title"
          >
            Users
          </h1>
          <div
            class="el-mb9 el-secondary-nav"
          >
            <div
              class="el-secondary-nav-item"
            >
              Users
            </div>
            <div
              class="el-is-active el-secondary-nav-item"
            >
              User Groups
            </div>
          </div>
          <span
            class="el-mb5 el-icon-size-large el-icon"
          >
            <svg />
          </span>
          <p
            class="el-has-grey-text el-body-text"
          >
            This list contains all available member groups for your organisation. You can manage users associated to each group by selecting the dropown.
          </p>
          <button
            class="el-mb5 el-button"
          >
            Docs
            <div
              class="el-button-loader"
            />
          </button>
          <div
            class="el-mb5"
          >
            <h2
              class="el-subtitle"
            >
              Organisations
            </h2>
            <p
              class="el-has-grey-text el-body-text"
            >
              You are an admin for multiple organisations - select from the list below for data specific to one of these organisations
            </p>
            <div
              class="el-border-radius controls-container"
            >
              <div
                class="el-input-group"
              >
                <select
                  class="el-wfull el-select"
                >
                  <option
                    value=""
                  >
                    Please Select
                  </option>
                  <option
                    value="value"
                  >
                    name
                  </option>
                  <option
                    value="value"
                  >
                    name
                  </option>
                </select>
                <label
                  class="el-label"
                  for="myId"
                >
                  Select Organisation
                </label>
              </div>
            </div>
          </div>
        </aside>
        <section
          class="el-hfull el-page-container"
        >
          <div
            class="el-flex-justify-between el-flex-container"
          >
            <h1
              class="el-title"
            >
              SOME_NAME
               User Groups
            </h1>
          </div>
          <div
            class="el-loader-container"
          >
            <div
              class="el-loader"
            >
              <div
                class="el-loader-moving-bar"
              />
            </div>
          </div>
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-flex-auto el-flex-container"
    >
      <aside
        class="el-secondary-nav-container"
      >
        <h1
          class="el-title"
        >
          Users
        </h1>
        <div
          class="el-mb9 el-secondary-nav"
        >
          <div
            class="el-secondary-nav-item"
          >
            Users
          </div>
          <div
            class="el-is-active el-secondary-nav-item"
          >
            User Groups
          </div>
        </div>
        <span
          class="el-mb5 el-icon-size-large el-icon"
        >
          <svg />
        </span>
        <p
          class="el-has-grey-text el-body-text"
        >
          This list contains all available member groups for your organisation. You can manage users associated to each group by selecting the dropown.
        </p>
        <button
          class="el-mb5 el-button"
        >
          Docs
          <div
            class="el-button-loader"
          />
        </button>
        <div
          class="el-mb5"
        >
          <h2
            class="el-subtitle"
          >
            Organisations
          </h2>
          <p
            class="el-has-grey-text el-body-text"
          >
            You are an admin for multiple organisations - select from the list below for data specific to one of these organisations
          </p>
          <div
            class="el-border-radius controls-container"
          >
            <div
              class="el-input-group"
            >
              <select
                class="el-wfull el-select"
              >
                <option
                  value=""
                >
                  Please Select
                </option>
                <option
                  value="value"
                >
                  name
                </option>
                <option
                  value="value"
                >
                  name
                </option>
              </select>
              <label
                class="el-label"
                for="myId"
              >
                Select Organisation
              </label>
            </div>
          </div>
        </div>
      </aside>
      <section
        class="el-hfull el-page-container"
      >
        <div
          class="el-flex-justify-between el-flex-container"
        >
          <h1
            class="el-title"
          >
            SOME_NAME
             User Groups
          </h1>
        </div>
        <div
          class="el-loader-container"
        >
          <div
            class="el-loader"
          >
            <div
              class="el-loader-moving-bar"
            />
          </div>
        </div>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`UsersPage should match a snapshot for the users tab 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-flex-auto el-flex-container"
      >
        <aside
          class="el-secondary-nav-container"
        >
          <h1
            class="el-title"
          >
            Users
          </h1>
          <div
            class="el-mb9 el-secondary-nav"
          >
            <div
              class="el-is-active el-secondary-nav-item"
            >
              Users
            </div>
            <div
              class="el-secondary-nav-item"
            >
              User Groups
            </div>
          </div>
          <span
            class="el-mb5 el-icon-size-large el-icon"
          >
            <svg />
          </span>
          <p
            class="el-has-grey-text el-body-text"
          >
            This list contains all ‘Users’ within your organisation. You can edit users to manage the groups an individual user belongs to. For more information on ‘User Groups’, please click below.
          </p>
          <button
            class="el-mb5 el-button"
          >
            Docs
            <div
              class="el-button-loader"
            />
          </button>
          <div
            class="el-mb5"
          >
            <h2
              class="el-subtitle"
            >
              Organisations
            </h2>
            <p
              class="el-has-grey-text el-body-text"
            >
              You are an admin for multiple organisations - select from the list below for data specific to one of these organisations
            </p>
            <div
              class="el-border-radius controls-container"
            >
              <div
                class="el-input-group"
              >
                <select
                  class="el-wfull el-select"
                >
                  <option
                    value=""
                  >
                    Please Select
                  </option>
                  <option
                    value="value"
                  >
                    name
                  </option>
                  <option
                    value="value"
                  >
                    name
                  </option>
                </select>
                <label
                  class="el-label"
                  for="myId"
                >
                  Select Organisation
                </label>
              </div>
            </div>
          </div>
        </aside>
        <section
          class="el-hfull el-page-container"
        >
          <div
            class="el-flex-justify-between el-flex-container"
          >
            <h1
              class="el-title"
            >
              SOME_NAME
               Users
            </h1>
          </div>
          <form>
            <div
              class="el-form-layout-has-margin el-form-layout"
            >
              <div
                class="el-input-wrap"
              >
                <div
                  class="el-input-group"
                >
                  <input
                    class="el-input"
                    id="test-static-id"
                    name="email"
                    placeholder="Search for a user"
                  />
                  <label
                    class="el-label"
                    for="test-static-id"
                  >
                    Email
                  </label>
                </div>
              </div>
              <div
                class="el-input-wrap"
              >
                <div
                  class="el-input-group"
                >
                  <input
                    class="el-input"
                    id="test-static-id"
                    name="name"
                    placeholder="Search for a user"
                  />
                  <label
                    class="el-label"
                    for="test-static-id"
                  >
                    Name
                  </label>
                </div>
              </div>
            </div>
          </form>
          <div
            class="el-loader-container"
          >
            <div
              class="el-loader"
            >
              <div
                class="el-loader-moving-bar"
              />
            </div>
          </div>
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-flex-auto el-flex-container"
    >
      <aside
        class="el-secondary-nav-container"
      >
        <h1
          class="el-title"
        >
          Users
        </h1>
        <div
          class="el-mb9 el-secondary-nav"
        >
          <div
            class="el-is-active el-secondary-nav-item"
          >
            Users
          </div>
          <div
            class="el-secondary-nav-item"
          >
            User Groups
          </div>
        </div>
        <span
          class="el-mb5 el-icon-size-large el-icon"
        >
          <svg />
        </span>
        <p
          class="el-has-grey-text el-body-text"
        >
          This list contains all ‘Users’ within your organisation. You can edit users to manage the groups an individual user belongs to. For more information on ‘User Groups’, please click below.
        </p>
        <button
          class="el-mb5 el-button"
        >
          Docs
          <div
            class="el-button-loader"
          />
        </button>
        <div
          class="el-mb5"
        >
          <h2
            class="el-subtitle"
          >
            Organisations
          </h2>
          <p
            class="el-has-grey-text el-body-text"
          >
            You are an admin for multiple organisations - select from the list below for data specific to one of these organisations
          </p>
          <div
            class="el-border-radius controls-container"
          >
            <div
              class="el-input-group"
            >
              <select
                class="el-wfull el-select"
              >
                <option
                  value=""
                >
                  Please Select
                </option>
                <option
                  value="value"
                >
                  name
                </option>
                <option
                  value="value"
                >
                  name
                </option>
              </select>
              <label
                class="el-label"
                for="myId"
              >
                Select Organisation
              </label>
            </div>
          </div>
        </div>
      </aside>
      <section
        class="el-hfull el-page-container"
      >
        <div
          class="el-flex-justify-between el-flex-container"
        >
          <h1
            class="el-title"
          >
            SOME_NAME
             Users
          </h1>
        </div>
        <form>
          <div
            class="el-form-layout-has-margin el-form-layout"
          >
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="email"
                  placeholder="Search for a user"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Email
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="name"
                  placeholder="Search for a user"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Name
                </label>
              </div>
            </div>
          </div>
        </form>
        <div
          class="el-loader-container"
        >
          <div
            class="el-loader"
          >
            <div
              class="el-loader-moving-bar"
            />
          </div>
        </div>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
